# MessagingProject

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  ChatPage.cpp  ChatPage.h  ConnectDialog.h  ConnectErrorPage.cpp  ConnectErrorPage.h  ConnectPage.cpp  ConnectPage.h  MainUI.cpp  MainUI.h  Page.h  client.cpp  clientold.cpp
server/: CMakeLists.txt  ServerApp.cpp  ServerApp.h  server.cpp  serverold.cpp
shared/: CMakeLists.txt  shared.h
shared/include/shared/socket/: Socket.h
shared/src/: Socket.cpp
